# progra1_main

./: CMakeLists.txt  README.md
Funciones/: CMakeLists.txt  bubblesort.c  factorial.c  potencia.c  prodescalar  prodescalar.c  seno.c  swap.c  toLower.c  toUpper.c  transpuesta.c
Parciales/1° Parcial/2015/: ej1  ej1.c  ej2  ej2.c  ej3  ej3.c  ej4  ej4.c  ej5  ej5.c  ej6  ej6.c
Parciales/1° Parcial/2020 1C/: ej1  ej1.c
Parciales/1° Parcial/2020 1C Recu/: ej1  ej1.c  ej2  ej2.c  ej3.c  ej4.c
Parciales/1° Parcial/2021 1C/: ej1  ej1.c  ej2.c  ej3.c  ej4  ej4.c  ej5  ej5.c  pruebas  pruebas.c
Parciales/1° Parcial/2021 2C/: ej3  ej3.c  ej5  ej5.c  test.txt
Parciales/2° Parcial/: CMakeLists.txt
Parciales/2° Parcial/2015 1C/: CMakeLists.txt  ej1.c  ej2.c  ej3.c  ej4.c  ej5.c  ej6.c
Parciales/2° Parcial/2019 2C/: CMakeLists.txt  ej1.c  ej2.c  ej3  ej3.c  ej4.c  ej5.c  ej6.c
Parciales/2° Parcial/2020 1C/: CMakeLists.txt  ej1  ej1.c  ej2.c  ej3.c  makefile.mk
Parciales/2° Parcial/2020 2C/: CMakeLists.txt
Parciales/2° Parcial/2020 2C/2020 2C 2Parcial/: ej1.c  ej2.h  ej3.c  ej4.c  ej5  ej5.c
Parciales/2° Parcial/2021 1C/: CMakeLists.txt  ej1.c  ej2.h  ej3.c  ej4.c  ej5.c
Parciales/2° Parcial/2021 2C/ej1/: CMakeLists.txt  main  main.c
Parcialitos/2/: PA2  PA2.c  PA2EJ1  PA2EJ1.c  PA2EJ2  PA2EJ2.c
Parcialitos/3/: pa3.2.c
Parcialitos/4/1/: ej1.c  ej2  ej2.c
Parcialitos/4/2/: ej1  ej1.c  ej2  ej2.c  ej3  ej3.c
Pruebas/: test1  test1.c  test2  test2.c  test3.c  test4  test4.c  test_plot  test_plot.c  text.txt
TP1/: ejercicio6.c  ejercicio8a.c  ejercicio8b  ejercicio8b.c  ejercicio8c  ejercicio8c.c  ejercicio8d  ejercicio8d.c  ejercicio8e  ejercicio8e.c
TP10/: CMakeLists.txt  maniposta.c  puerto.c  puerto.h
TP10/ej1/: comparar.h  comparar_enteros.c  main.c
TP10/ej1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml
TP10/ej3/: main.c
TP10/ej3/nbproject/: project.xml
TP10/ej4_puerto/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
TP10_2/ej3/: quick.c
TP10_2/ej4/: main
TP11/AllegroEx10BitmapsEscalado/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx1Display/: main.c
TP11/AllegroEx2Events/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx3Bitmaps/: main.c
TP11/AllegroEx3Bitmaps/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx4Timers/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx5Mouse/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx6KeyBoard/: main.c
TP11/AllegroEx7Fonts/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/AllegroEx8Primitivas/nbproject/: Makefile-Debug.mk  Makefile-Release.mk
TP11/ej1/: leds.c  leds.h  main  main.c
TP11/ej1/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  configurations.xml  project.xml
TP11/ej1/nbproject/private/: private.xml
TP13/ej2/: data.c
TP13/ej3/: display.c  display.h  mensajes.h
TP13/ej6/: main.c
TP13/ej7/: test.c
TP2/: EJ1  EJ1.c  EJ2  EJ2.c  EJ3  EJ3.c  EJ4  EJ4.c  EJ5  EJ5.c  EJ6  EJ6.c  P07  P07.c
TP3/: EJ1.c  EJ2  EJ2.c  EJ3  EJ4  EJ4.c  EJ5  EJ5.c  test.txt
TP4/: ej1  ej1.c  ej2  ej2.c  ej3  ej3.c  ej4  ej4.c  mod3  mod3.c
TP5/: -g  ej1  ej1.c  ej2  ej2.c  ej3  ej3.c  ej4  ej4.c  ej5  ej5.c  ej6.c  ej7  ej7.c  ej8  ej8.c  ej9  ej9.c  getstring  getstring.c  word  word.c
TP6/: ej1.c  ej10.c  ej11.c  ej12.c  ej2.c  ej3  ej3.c  ej4.c  ej5.c  ej6.c  ej7.c  ej8.c  prueba.c
TP7/ej1/: file1.c  file2.c
TP7/ej2/: inpunt.c  main.c  makefile  output.c  process1.c  process2.c
TP7/ej3/: ej3  ej3.c
TP7/ej4/: ej4.c  file1.c  file2.c
TP7/ej5/: compilacion.txt  config.h  game.c  game.h  main.c  makefile  utils.c  utils.h
TP7/make test/: fun1.c  fun1.h  fun2.c  fun2.h  main  main.c  makefile
TP8/: ej1  ej1.c  ej2  ej2.c  ej3  ej3.c
TP8/ej4/: ej4  ej4.c  print  print.c  prueba  prueba.c
TP9/: README.md
TP9/ej1/: main.c
TP9/ej2/: main.c
TP9/ej2/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  project.xml
TP9/ej3/: main.c  palindromos.h  test.c
TP9/ej3/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
test/: main
