cmake_minimum_required(VERSION 3.20)
project(2__Parcial)

set(CMAKE_CXX_STANDARD 14)

add_executable(2__Parcial
        #"2019 2C/ej1.c"
        "2019 2C/ej2.c"
        #"2019 2C/ej3.c"
        #"2019 2C/ej4.c"
        "2019 2C/Parcial II 2C 2019.PNG"
        "2020 1C/2020 1C 2P con rtas.pdf"
        "2020 2C/2020 2C 2Parcial/ejer1.png"
        "2020 2C/2020 2C 2Parcial/ejer2.png"
        "2020 2C/2020 2C 2Parcial/ejer3.png"
        "2020 2C/2020 2C 2Parcial/ejer4y5.png"
        "2021 1C/2021-1C-2P.pdf")
